Adding validation messages help text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DOCTORED XML EDITOR</title>
 </head>
 <body>
+    <p style="float:right; text-align:right; margin-right:80px; width: 300px; color: rgb(102, 102, 102); text-shadow: 1px 1px 1px #999999; font-weight: bold; transform: rotate(1deg); font-family: "Reenie Beanie",Arial,sans-serif;">If you see messages here,<br>these aren't errors,<br>these are validation messages &#8628;</p>
     <div id="document" contenteditable="true" class="doctored">
         <div data-element="title" class="block">A very simple book</div>
         <div data-element="chapter" data-attributes='{"blah":"blah"}' class="block">
@@ -32,6 +33,7 @@
     <script src="core/js/jquery-1.9.1.min.js"></script>
     <script src="core/libs/handlebars/handlebars.js"></script>
     <script src="core/libs/picoModal/picoModal.js"></script>
+    <script src="core/js/shims.js"></script>
     <script src="core/js/app.js"></script>
 </body>
 </html>
