--- a/index.html
+++ b/index.html
@@ -2,38 +2,25 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" href="core/css/screen.css">
-    <title>DOCTORED XML EDITOR</title>
+    <title>Doctored.js XML editor</title>
+    <style>
+        body {
+            background: #eeeeee;
+        }
+    </style>
 </head>
 <body>
-    <p style="float:right; text-align:right; margin-right:80px; width: 300px; color: rgb(102, 102, 102); text-shadow: 1px 1px 1px #999999; font-weight: bold; transform: rotate(1deg); font-family: "Reenie Beanie",Arial,sans-serif;">If you see messages here,<br>these aren't errors,<br>these are validation messages &#8628;</p>
-    <div id="document" contenteditable="true" class="doctored">
-        <div data-element="title" class="block">A very simple book</div>
-        <div data-element="chapter" data-attributes='{"blah":"blah"}' class="block">
-            <div data-element="para" data-attributes='{"blah":"blah"}' class="block">
-             Anyway, Jim Hickey is just the Armed Offenders Squad in disguise, to find the true meaning of life, one must start making scones with the jelly tip icecream, mate. After the can of Watties Baked Beans is flogged, you add all the tapu chilly bins to the native vegetable you've got yourself a meal.  <div data-element="abbr" data-attributes="" class="inline-block">testing <div data-element="abbr" class="inline-block">Do you happen </div> to have a bucket or a hose bro?</div>  Mean while, in Shortland Street, Rhys Darby and Fred Dagg were up to no good with a bunch of flat stick troties. The buzzy force of his preparing the hungi was on par with Hairy Maclary from Donaldson's Dairy's thermo-nuclear lamington.
-            </div>
-        </div>
-        <div data-element="chapter" data-attributes='{"blah":"blah"}' class="block">
-            <div data-element="para" class="block">
-            The next Generation of nuclear-free sad guys have already jumped the ditch over at the fish n' chip shop. Sink some piss. What's the hurry The Topp Twins? There's plenty of marmite shortages in behind the bicycle shed. I was just at home having some dots...., pissed as a rat. The tinny house holds the most same same but different community in the country.. Maui was burning my Vogel's when the rip-off skiving off event occured
-        </div>
-        <div data-element="para" class="block">
-            The first prize for cooking up a feed goes to... Hercules Morse, as big as a horse and his beautiful weka, what a egg. Bro, craft supplies are really snarky good with pretty suss bottles of milk, aye. You have no idea how bung our primo quater-acre patches were aye. Every time I see those cool All Blacks it's like the beach all over again aye, oh stink buzz.
-        </div>
-        <div data-element="para" class="block">
-            A slice of heaven. Internalizing a really complicated situation, throw a wobbly. Nek minnit, this nuclear-free cuzzie is as buzzy as a pretty suss housie. Mean while, in behind the bicycle shed, Spot, the Telecom dog and Mrs Falani were up to no good with a bunch of stink kiwis. 
-        </div>
-      </div>
-    </div>
-    <div id="xml_duration"></div>
-    <button id="see_xml">See XML</button>
-    <textarea id="xml" style="width:100%;height:200px;"></textarea>
-    <textarea id="validation_result"></textarea>
-    <script src="core/js/jquery-1.9.1.min.js"></script>
-    <script src="core/libs/handlebars/handlebars.js"></script>
-    <script src="core/libs/picoModal/picoModal.js"></script>
-    <script src="core/js/shims.js"></script>
-    <script src="core/js/app.js"></script>
+
+    <div id="editor1"></div>
+
+    <div id="editor2"></div>
+
+    <script src="dependencies/jquery-1.9.1.min.js"></script>
+    <script src="doctored/doctored.js"></script>
+
+    <script>
+        var editor1 = doctored.init("#editor1");
+        var editor2 = doctored.init("#editor2");
+    </script>
 </body>
 </html>
