--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Doctored.js XML editor</title>
-    <style>
-        body {
-            background: #eeeeee;
-        }
-    </style>
+    <style> body { background: #eeeeee; } </style>
 </head>
 <body>
-
     <div id="editor1"></div>
-
     <div id="editor2"></div>
-
     <script src="dependencies/jquery-1.9.1.min.js"></script>
     <script src="doctored/doctored.js"></script>
-
     <script>
         var editor1 = doctored.init("#editor1");
         var editor2 = doctored.init("#editor2");
