adding paste support

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <style> body { background: #eeeeee; } </style>
 </head>
 <body>
+    <h1>Editor 1</h1>
     <div id="editor1"></div>
+    <h1>Editor 2</h1>
     <div id="editor2"></div>
     <script src="dependencies/jquery-1.9.1.min.js"></script>
     <script src="doctored/doctored.js"></script>
