moving docbook config to separate file

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <style> body { background: #eeeeee; } h1 { font-family: sans-serif; margin:1em 0px 10px 0px; padding: 0px;} </style>
 </head>
 <body>
-    <h1>Editor 1</h1>
+    <h1>Doctored.js editor demo</h1>
     <div id="editor1"></div>
-    <h1>Editor 2</h1>
-    <div id="editor2"></div>
     <script src="dependencies/jquery-1.9.1.min.js"></script>
     <script src="doctored/doctored.js"></script>
     <script>
         var editor1 = doctored.init("#editor1");
-        var editor2 = doctored.init("#editor2");
     </script>
 </body>
 </html>
