--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style> body { background: #eeeeee; } h1 { font-family: sans-serif; margin:1em 0px 10px 0px; padding: 0px;} </style>
 </head>
 <body>
-    <h1>Doctored.js editor demo</h1>
+    <h1>Doctored.js XML editor demo</h1>
     <div id="editor1"></div>
     <script src="dependencies/jquery-1.9.1.min.js"></script>
     <script src="doctored/doctored.js"></script>
