--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Doctored.js XML editor</title>
-    <style> body { background: #eeeeee; } h1 { font-family: sans-serif; margin:1em 0px 10px 0px; padding: 0px;} </style>
+    <style> body { background: #eeeeee; } h1 { font-family: sans-serif; margin:1em 0px 10px 0px; padding: 0px; font-weight:100;} </style>
 </head>
 <body>
     <h1>Doctored.js XML editor demo</h1>
