removing jQuery use for replaceWith()

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="dependencies/jquery-1.9.1.min.js"></script>
     <script src="doctored/doctored.js"></script>
     <script>
-        var onload = function(){console.log("Doctored.js: initialized " + this.root_selector + "!")};
+        var callback = function(){console.log("Doctored.js: initialized " + this.root_selector + "!")};
 
-        doctored.init("#editor1", {onload:onload});
+        doctored.init("#editor1", {onload:callback});
     </script>
 </body>
 </html>
