Updating 'more info' links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Doctored.js XML editor demo</h1>
     <div id="editor1"></div>
+    <hr>
+    More info? See the <a href="http://holloway.co.nz/doctored/">Doctored.js website</a>
     <script src="doctored/doctored.js"></script>
     <script>
         var callback = function(){console.log("Doctored.js: initialized " + this.root_selector + "!")};
