Updating 'more info' links

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Doctored.js XML editor</title>
-    <style> body { background: #eeeeee; } h1 { font-family: sans-serif; margin:1em 0px 10px 0px; padding: 0px; font-weight:100;} </style>
+    <style> body { background: #eeeeee; font-family:sans-serif; } h1 { font-family: sans-serif; margin:1em 0px 10px 0px; padding: 0px; font-weight:100;} </style>
 </head>
 <body>
     <h1>Doctored.js XML editor demo</h1>
     <div id="editor1"></div>
-    <hr>
-    More info? See the <a href="http://holloway.co.nz/doctored/">Doctored.js website</a>
+    
+    <p style="text-align:right">More info? See the <a href="http://holloway.co.nz/doctored/">Doctored.js website</a></p>
     <script src="doctored/doctored.js"></script>
     <script>
         var callback = function(){console.log("Doctored.js: initialized " + this.root_selector + "!")};
