--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Doctored.js XML editor</title>
+    <title>Doctored.js DEMO - a new kind of editor</title>
     <style> body { background: #eeeeee; font-family:sans-serif; } h1 { font-family: sans-serif; margin:1em 0px 10px 0px; padding: 0px; font-weight:100;} </style>
 </head>
 <body>
