Initial work on multi-file support

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <i></i><b></b><u></u><s></s>
     </header>
 
-    <div id="editor1"></div>
+    <div class="editor-container">
+        <div id="editor1"></div>
+    </div>
         
     <script src="doctored/doctored.js"></script>
     <script>
